--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -11,9 +11,7 @@
       <button id="load-user">Load Random User</button>
     </div>
 
-    <div id="user-container">
-      <!-- Hier werden die Benutzerinformationen angezeigt -->
-    </div>
+    <div id="user-container"></div>
 
     <script src="js/compiled/random_user.js"></script>
   </body>
