--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
     <div id="user-container"></div>
 
-    <script src="js/compiled/random_user.js"></script>
+    <script src="/random_user.js"></script>
   </body>
 </html>
